--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "@sendgrid/mail": "^7.4.2",
     "algoliasearch": "^4.8.5",
     "autoprefixer": "^10.2.4",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
+    "express-session": "^1.17.1",
     "handlebars": "^4.7.7",
     "instantsearch.js": "^4.16.1",
     "materialize-css": "^1.0.0-rc.2",
+    "mongoose": "^5.12.4",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "postcss": "^8.2.6",
     "tailwindcss": "^2.0.3"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
